# arcade

./: Cargo.toml
assets/: cannon.blend  cannon.glb  map.blend  map.glb  player.blend  player.glb
assets/entity/: base.blend  base.glb  border.blend  border.glb  player.blend  player.glb  tank.blend  tank.glb
assets/map/: map.blend  map.glb
src/: main.rs
src/client/: mod.rs
src/client/game/: mod.rs
src/client/ui/: mod.rs
src/entity/: base.rs  mod.rs  player.rs
src/game/: asset.rs  camera.rs  event.rs  input.rs  mod.rs  shop.rs
src/game/event/: mod.rs  player_base.rs  respawn.rs
src/map/: mod.rs
src/ui/: mod.rs  select_map.rs  title.rs
